# kwhiteboard

./: .gitignore  .reviewboardrc  CMakeLists.txt  config.h.in  kwhiteboard.cpp  kwhiteboard.h  kwhiteboard.kdev4  kwhiteboardwidget.cpp  kwhiteboardwidget.h  main.cpp  tpqt.diff
.kdev4/: kwhiteboard.kdev4
approver/: kblackboard.desktop  kwhiteboard.desktop
cmake/modules/: FindTelepathyQt4.cmake
kblackboard/: CMakeLists.txt  blackboardwidget.cpp  blackboardwidget.h  main.cpp  telepathyblackboard.cpp  telepathyblackboard.h  telepathywhiteboard.cpp  telepathywhiteboard.h  whiteboardwidget.cpp  whiteboardwidget.h
kwhiteboard/: CMakeLists.txt  KTp.KWhiteboard.client  Messages.sh  PeerManager.cpp  PeerManager.h  kwhiteboard-handler.cpp  kwhiteboard-handler.h  kwhiteboard.cpp  kwhiteboard.h  kwhiteboardthread.cpp  kwhiteboardthread.h  kwhiteboardui.rc  kwhiteboardwidget.cpp  kwhiteboardwidget.h  main.cpp  org.freedesktop.DBus.Introspectable.xml  org.freedesktop.DBus.Peer.xml  org.freedesktop.Telepathy.Client.KTp.KWhiteboard.service.in  org.kde.DBus.Peer.xml  peer.cpp  peer.h
launcher/: CMakeLists.txt  kboard-launcher.desktop  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  IncomingTube.cpp  IncomingTube.h  KTp.KWhiteboard.client  OutgoingTube.cpp  OutgoingTube.h  TelepathyChannelManager.cpp  TelepathyChannelManager.h  TelepathyHelpers.cpp  TelepathyHelpers.h  TubeLauncher.cpp  TubeLauncher.h  TubesManager.cpp  TubesManager.h  kwhiteboard-handler.cpp  kwhiteboard-handler.h  kwhiteboard.client  kwhiteboard.cpp  kwhiteboard.h  kwhiteboardwidget.cpp  kwhiteboardwidget.h  main.cpp  org.freedesktop.Telepathy.Client.kwhiteboard.service.in
